--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/stack": "^5.1.1",
     "@svgr/cli": "^5.2.0",
     "axios": "^0.19.2",
+    "global": "^4.4.0",
     "intl": "^1.2.5",
+    "json-server": "^0.16.1",
     "polished": "^3.4.4",
     "react": "16.9.0",
     "react-native": "0.61.5",
