--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@svgr/cli": "^5.2.0",
     "axios": "^0.19.2",
     "global": "^4.4.0",
+    "immer": "^6.0.1",
     "intl": "^1.2.5",
     "json-server": "^0.16.1",
     "polished": "^3.4.4",
@@ -31,7 +32,10 @@
     "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.2",
+    "react-redux": "^7.2.0",
     "reactotron-react-native": "^4.0.3",
+    "reactotron-redux": "^3.1.2",
+    "redux": "^4.0.5",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
