--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "clear-adv": "react-native start --reset-cache"
+    "clear-adv": "react-native start --reset-cache",
+    "server": "json-server server.json --host 192.168.1.50 -p 3332 -w"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.7",
@@ -35,7 +36,9 @@
     "react-redux": "^7.2.0",
     "reactotron-react-native": "^4.0.3",
     "reactotron-redux": "^3.1.2",
+    "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
